# readmission-predictor

./: .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: app.py
scripts/: create_test_data.py
src/: api.py  cli.py  config.py  data_loader.py  diabetes_model.py  generate_data.py  model.py  model_trainer.py  nlp_pipeline.py  settings.yaml
tests/: __init__.py  test_api.py  test_data.py  test_model.py
