[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medai"
version = "2.0.0"
description = "Enterprise Medical AI — Diabetes & Readmission Prediction with NLP, SHAP, FastAPI"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [{name = "Yaser Shawdfi", email = "paiawon@outlook.com"}]
keywords = ["medtech", "ai", "healthcare", "diabetes", "readmission", "nlp", "shap"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Medical Science",
]

dependencies = [
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "shap>=0.44",
    "streamlit>=1.30",
    "pandas>=2.0",
    "numpy>=1.24",
    "plotly>=5.18",
    "matplotlib>=3.7",
    "joblib>=1.3",
    "fastapi>=0.100",
    "uvicorn>=0.24",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "httpx>=0.24",
    "ruff>=0.1",
]

[project.scripts]
medai = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "N803", "N806", "E741"]